<resources>
    <string name="app_name">CicloComputador</string>

    <string name="navbar_route_label">Route</string>
    <string name="navbar_map_label">Map</string>
    <string name="navbar_historic_label">Historic</string>
    <string name="navbar_config_label">Config</string>

    <string name="speed_label">Speed</string>
    <string name="avg_speed_label">AVG</string>
    <string name="max_speed_label">Max</string>
    <string name="time_label">Time</string>
    <string name="distance_label">Distance</string>
    <string name="lap_label">Lap</string>

    <string name="speed_value_model">%02.1f Km/h</string>
    <string name="avg_speed_value_model">%02.1f Km/h</string>
    <string name="max_speed_value_model">%02.1f Km/h</string>
    <string name="time_value_model">%02d:%02d:%02d.%02d</string>
    <string name="distance_value_model">%02.1f Km</string>

    <string name="speed_value_default">0.0 Km/h</string>
    <string name="avg_speed_value_default">0.0 Km/h</string>
    <string name="max_speed_value_default">0.0 Km/h</string>
    <string name="time_value_default">00:00:00.00</string>
    <string name="distance_value_default">0.0 Km</string>
    <string name="lap_value_default">0</string>

    <string name="main_meter_stop_label">Stop</string>
    <string name="main_meter_start_pause_label">StartAndPause</string>
    <string name="main_meter_lap_label">Lap</string>
    <string name="title_activity_maps">MapsActivity</string>

</resources>