<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NavbarFragment">

    <ImageButton
        android:id="@+id/route_button"
        android:layout_width="0dp"
        android:layout_height="0dp"

        android:contentDescription="@string/navbar_route_label"
        android:scaleType="centerInside"
        android:src="@drawable/distance"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/map_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/map_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/navbar_map_label"
        android:padding="8dp"
        android:scaleType="centerInside"
        android:src="@drawable/maps"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/historic_button"
        app:layout_constraintStart_toEndOf="@+id/route_button"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/historic_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/navbar_historic_label"
        android:scaleType="centerInside"
        android:src="@drawable/historical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/config_button"
        app:layout_constraintStart_toEndOf="@+id/map_button"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <ImageButton
        android:id="@+id/config_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/navbar_config_label"
        android:scaleType="centerInside"
        android:src="@drawable/gear"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/historic_button"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>