<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="24dp"
    android:minWidth="200dp"
    android:minHeight="100dp"
    tools:context=".LapReport">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/time"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:minWidth="200dp"
        android:minHeight="200dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/distance"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lapNumber">

        <TextView
            android:id="@+id/lapTimeValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time_value_default"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lapTimeLabel" />

        <TextView
            android:id="@+id/lapTimeLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time_label"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/lapTimeValue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/distance"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:minWidth="200dp"
        android:minHeight="200dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/time"
        app:layout_constraintTop_toBottomOf="@+id/avgSpeed">

        <TextView
            android:id="@+id/lapDistanceValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/distance_value_default"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lapDistanceLabel" />

        <TextView
            android:id="@+id/lapDistanceLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/distance_label"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/lapDistanceValue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/avgSpeed"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:minWidth="200dp"
        android:minHeight="200dp"
        app:layout_constraintBottom_toTopOf="@+id/distance"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/lapNumber"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/lapAVGSpeedValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/avg_speed_value_default"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lapAVGSpeedLabel" />

        <TextView
            android:id="@+id/lapAVGSpeedLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/avg_speed_label"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/lapAVGSpeedValue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/lapNumber"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:minWidth="200dp"
        android:minHeight="200dp"
        app:layout_constraintBottom_toTopOf="@+id/time"
        app:layout_constraintEnd_toStartOf="@+id/avgSpeed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/lapCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lap_value_default"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lapValue" />

        <TextView
            android:id="@+id/lapValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lap_label"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/lapCount"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>